--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### VisualStudioCode template
 .vscode/*
 !.vscode/settings.json
+!.vscode/settings.js
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
